semester2/object_oriented_programming/tps/projet-court/evaluations/evaluation1/StrategieNaive.java.log
allumettes/StrategieNaive.java:6: error: cannot find symbol
		int val = Generateur.nb_Aleatoire(jeu);
		          ^
  symbol:   variable Generateur
  location: class StrategieNaive
1 error
